# sort-compare

./: .gitignore  CMakeLists.txt  HELLO.c  Header.h  Input_Output.c  Sort.h  Sort_N_1.c  Sort_N_2.c  Sort_N_3.c  Time.c  Time.h  Time_caclulations.c  Time_caclulations.h  main.c  menu.c
Include/: Header.h  Sort.h  Time.h
Sorting/: Sort_N_1.c  Sort_N_2.c  Sort_N_3.c
utils/: Time.c  Time_caclulations.c  Time_caclulations.h
